// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input clearHandler should be work 1`] = `
<div class="fect-input fect-input--medium">
  <!---->
  <div class="fect-input__container">
    <!---->
    <div class="fect-input__wrapper">
      <!----><input type="text" class="">
      <div class="fect-input__icon fect-input__icon--suffix" style="cursor: default; pointer-events: none;">
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input normal props should work correctly 1`] = `
<div>
  <div class="fect-input fect-input--mini"><label><span>Test</span></label>
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper">
        <!----><input type="password" class="" placeholder="This is a test message">
        <!---->
        <div class="fect-input__icon fect-input__icon--suffix" style="cursor: pointer; pointer-events: auto;"><svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;">
            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
            <circle cx="12" cy="12" r="3"></circle>
          </svg></div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Input should be render as a element 1`] = `
<div class="fect-input fect-input--medium">
  <!---->
  <div class="fect-input__container">
    <!---->
    <div class="fect-input__wrapper">
      <!----><input type="text" class="">
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input should support render prefix and suffix icon 1`] = `
<div>
  <div class="fect-input fect-input--medium">
    <!---->
    <div class="fect-input__container">
      <!---->
      <div class="fect-input__wrapper">
        <div class="fect-input__icon fect-input__icon--prefix" style="cursor: pointer; pointer-events: auto;"><svg width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" style="" viewBox="0 0 24 24">
            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
          </svg></div><input type="text" class="">
        <!---->
        <div class="fect-input__icon fect-input__icon--suffix" style="cursor: pointer; pointer-events: auto;"><svg width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" style="" viewBox="0 0 24 24">
            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
          </svg></div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
